# c3d

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: engine.cpp.B0B1ACEF12F8B431.idx  engine.hpp.DDB5B1A108F084D1.idx  glad.c.F5D5EA2CEE6EED8A.idx  glad.h.915A4D8C99E23008.idx  khrplatform.h.F23E47E9C872CC67.idx  main.cpp.30EEF61BFA2DE7F8.idx
include/: engine.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: engine.cpp  main.cpp
